Updated the UI and fixed some issues such as the too long names of an attractions,I made a list with the previous attractions created, they are also visible on the landing page now.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,7 +28,7 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes spin {
   from {
     transform: rotate(0deg);
   }
@@ -45,11 +45,19 @@
             border-radius: 8px;
             border: 2px solid gray;
             display: inline-block;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 300px;
+            object-fit: contain;
         }
         .attraction #name {
             font-size: 25px;
             font-weight: bold;
-            
+            display: -webkit-inline-box;
+            max-width: 40%;
+            min-width: 0;
+            overflow: hidden;
+            text-overflow: ellipsis
         }
         .checked {
             color:orange;
@@ -78,20 +86,25 @@
             justify-content: center;
             align-items: center;
         }
-.logo { 
-         background: url("./assets/img/logo.jpg") no-repeat; 
-         width: 100px; 
-         height: 100px; 
-         display: block; 
-         visibility:  visible;
-         border-radius: 50%;
-         
-}
-.img {
-    width: 100px; 
-    height: 100px;
+
+
+.optionalForm {
+    padding: 20px;
+    background-color: rgb(219, 218, 212);
 }
 
-.img-thumbnail {
-  background: url("./assets/img/logo.jpg") no-repeat; 
+.ofb {
+    display: flex;
+    align-items: center;
+    justify-self: center;
+    flex-direction: column;
+}
+
+#attractionDiv {
+    align-items: center;
+    align-self: center;
+}
+
+html {
+    scroll-behavior: smooth;
 }
